# c-game-dev-learning

./: .gitignore  BUILD.md  CMakeLists.txt  ai-profile.md
include/: game.h
include/core/: camera.h  config.h  game.h
include/entities/: altar.h  enemy.h  entity.h  gem.h  player.h
include/world/: world.h
scripts/: dev.sh
src/: game.c  main.c
src/core/: camera.c  game.c
src/entities/: altar.c  enemy.c  entity.c  gem.c  player.c
src/world/: world.c
